--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -14,6 +14,6 @@ metadata:
       title: SML Website
       icon: search
 spec:
-  type: library
+  type: service
   lifecycle: production
   owner: group:spp-sml
