--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -7,7 +7,7 @@ metadata:
     jira/project-key: SPP
     github.com/project-slug: ONSdigital/sml-python-small
     backstage.io/linguist: https://github.com/backstage-dummy-org/sml-python-small/
-    backstage.io/kubernetes-id: knote
+    backstage.io/kubernetes-id: garbagetime
   tags:
     - python
     - sml
