--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -6,8 +6,7 @@ metadata:
   description: Approved statistical methods for use in small datasets.
   annotations:
     github.com/project-slug: backstage-dummy-org/sml-python-small
-    backstage.io/techdocs-ref: dir:.
-    onboarding-docs: https://raw.githubusercontent.com/backstage-dummy-org/sml-python-small/main/docs/onboarding.md
+    backstage.io/techdocs-ref: url:https://githubhost.com/org/repo/tree/main/onboarding
   tags:
     - python
     - java
