--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -7,6 +7,7 @@ metadata:
   annotations:
     github.com/project-slug: backstage-dummy-org/sml-python-small
     backstage.io/techdocs-ref: dir:.
+    onboarding-docs: https://raw.githubusercontent.com/backstage-dummy-org/sml-python-small/master/docs/onboarding.md
   tags:
     - python
     - java
